<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mmxlabs.lingo.master</groupId>
	<artifactId>com.mmxlabs.lingo.master.parent</artifactId>
	<version>5.7.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>com.mmxlabs.parent</groupId>
		<artifactId>tycho-parent</artifactId>
		<relativePath />
		<version>51</version>
	</parent>

	<scm>
		<connection>scm:git:git@gitlab.com:mmxlabs/LiNGO/LiNGO.git</connection>
		<developerConnection>scm:git:git@gitlab.com:mmxlabs/LiNGO/LiNGO.git</developerConnection>
		<url>https://gitlab.com/mmxlabs/LiNGO/LiNGO</url>
	</scm>

	<ciManagement>
		<system>Jenkins</system>
		<url>http://build.mmxlabs.com/job/master/job/LiNGO-master/</url>
	</ciManagement>

	<properties>
		<tycho-extras-version>2.6.0</tycho-extras-version>
	    <tycho.version>2.6.0</tycho.version>
	</properties>

	<modules>
		<module>com-mmxlabs-lingo-common-target</module>
		<module>com-mmxlabs-common-util</module>
		<module>com-mmxlabs-optimiser</module>
		<module>com-mmxlabs-lng-scheduler</module>
		<module>com-mmxlabs-models-mmxcore</module>
		<module>com-mmxlabs-nebula-ganttchart</module>
		<module>com-mmxlabs-rcp-common</module>
		<module>com-mmxlabs-scenario-service</module>
		<module>com-mmxlabs-models-migration</module>
		<module>com-mmxlabs-models-ui</module>
		<module>com-mmxlabs-models-lng</module>
		<module>com-mmxlabs-models-lng-transformer</module>
		<module>com-mmxlabs-lingo-reports</module>
		<module>com-mmxlabs-lngdataserver</module>
		<module>com-mmxlabs-lingo</module>
	</modules>
	<build>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.eclipse.tycho</groupId>
										<artifactId>target-platform-configuration</artifactId>
										<versionRange>[0.15.0,)</versionRange>
										<goals>
											<goal>target-platform</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<!-- Enable tycho packaging types -->
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<configuration>

					<resolver>p2</resolver>
					<executionEnvironment>JavaSE-17</executionEnvironment>

					<target>
						<artifact>
							<groupId>com.mmxlabs.lingo.common.target</groupId>
							<artifactId>com.mmxlabs.lingo.common.target-definition</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>

					<environments>

						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		
		
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<configuration>
					<argLine>-ea -Dosgi.nl=en_GB -Dlingo.suppress.dialogs=true -Dlingo.enc.keyfile=${lingo.enc.keyfile} -Dlingo.license.file=${lingo.license.file}</argLine>

					<dependencies>
						<!-- avoid CNFE in Surefire when looking for JUnitPlatformProvider -->
						<dependency>
							<artifactId>org.junit</artifactId>
							<type>eclipse-plugin</type>
						</dependency>
					</dependencies>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<!-- <pluginRepositories> <pluginRepository> <id>cbi</id> <url>https://repo.eclipse.org/content/repositories/cbi-releases/ 
		</url> </pluginRepository> </pluginRepositories> <build> <plugins> <plugin> 
		<groupId>org.eclipse.cbi.maven.plugins</groupId> <artifactId>eclipse-jarsigner-plugin</artifactId> 
		<version>1.1.7</version> <executions> <execution> <id>sign</id> <phase>package</phase> 
		<goals> <goal>sign</goal> </goals> </execution> </executions> <configuration> 
		<signerUrl>http://kubera.mmxlabs.lan:3138/jarsigner</signerUrl> </configuration> 
		</plugin> </plugins> </build> -->
</project>

